--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                                 href="file:///home/eba/Documents/Docs/project/HTML%20project/Psalm/index.html">The App
                                 Psalm</a>
                         </strong></em></p>
-                <p>I am an iOS and Web Developer. I love cocs and teas.</p>
+                <p>I am a Web Developer. I love coffe and teas.</p>
             </td>
         </tr>
     </table>
@@ -27,7 +27,7 @@
     <hr>
     <h2>Books and Teaching</h2>
     <ul>
-        <li>The Complete iOS App Development Bootcamp </li>
+        <li>The Complete Flatter App Development Bootcamp </li>
         <li>The Complete Web Development Bootcamp</li>
     </ul>
     <h3>Work Experience</h3>
@@ -40,12 +40,15 @@
         </thead>
         <tbody>
             <tr>
-                <td>2010-2013</td>
-                <td>Lead Developer at Tempo App</td>
+                <td>Wolkite University</td>
             </tr>
             <tr>
-                <td>2013-2015</td>
-                <td>Researcher at Teh Institute of Cognitive Neurosciences</td>
+                <td>2021-present</td>
+                <td>ICT incubation and WKU ICPC team</td>
+            </tr>
+            <tr>
+                <td> </td>
+                <td>Software Developer, Compititive Programmer</td>
             </tr>
         </tbody>
         <tfoot>
@@ -55,17 +58,23 @@
     <h3>Skills</h3>
     <table>
         <tr>
-            <td>iOS Development</td>
-            <td>⭐⭐⭐⭐⭐</td>
+            <td>Flatter Development</td>
+            <td>⭐</td>
+        <tr>
             <td>Photography</td>
-            <td>⭐⭐</td>
+            <td>⭐⭐⭐</td>
+        </tr>
+
         </tr>
         <tr>
             <td>Web-Develeopment</td>
-            <td>⭐⭐⭐⭐</td>
-            <td>Painting</td>
-            <td>⭐⭐⭐</td>
+            <td>⭐⭐⭐⭐⭐</td>
+
+        <tr>
+            <td>Graphics</td>
+            <td>⭐⭐</td>
         </tr>
+
     </table>
     <a href="/hobbies.html">My Hobbies</a>
     <a href="/contact-me.html">Contact-me</a>
